--- a/elsi.html
+++ b/elsi.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"><!-- レスポンシブデザインへの対応 -->
     <title>BIOMOD 2022 Quorum Hacker</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_for_elsi.css">
     <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script><!-- jQuery読み込み -->
     <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script><!-- BootstrapのJS読み込み -->
@@ -17,7 +17,7 @@
     <script src="js/5-1-10.js"></script> <!--subnavの自作のJS-->
     <script src=”js/stickyfill.min.js”></script> <!--subnavのJS　Gitから-->
     <script src=”js/stickyfill.js”></script> <!--subnavのJS　Gitから-->
-    <script src="js/5-1-26.js"></script> <!--現在地表示の自作のJS-->
+    <script src="js/5-1-26_for_elsi.js"></script> <!--現在地表示の自作のJS-->
 
 
 
@@ -32,52 +32,52 @@
 
 <body>
 <div id="header"></div>
-<div class="container elsi_card">
-    <div class="row">
-      <div class="col">
-        <h3>Where</h2>
-      </div>
-      <div class="col">
-        <h3>Who</h2>
-      </div>
-      <div class="col">
-        <h3>Concerns</h2>
-      </div>
-    </div>
-  </div>
+
 <div id="container">
     <main id="main-area">
         <section class="scroll-point" id="area-1">
+            <h2>WWC</h2>
+            <table>
+                <tr><th>Where</th><th>Who</th><th>Concerns</th></tr>
+                <tr><td>In the nature</td><td>Pro-environment group</td><td>Unintended leakage into the environment</td></tr>
+                <tr><td>Laboratory</td><td>Government</td><td>Impact of using DNA on biodiversity</td></tr>
+                <tr><td>Sewage treatment plant</td><td>Biofilm Utilizers</td><td>Inhibits the utilized biofilm</td></tr>
+            </table>
+        </section>
+        <section class="scroll-point" id="area-1">
             <h2>Ethical issues</h2>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+            <p>From the perspective of environmental groups, this section discusses the ethical issue of concern for natural organisms when “Quorum Hacker” unintentionally leak into the natural environment. First, it is unlikely that “Quorum Hacker” would unintentionally destroy biofilms in nature. Because the DNA aptamer of the “Quorum Hacker” is designed to act specifically on a particular quormone and is unlikely to inhibit the formation of non-target biofilms. Therefore, the ethical issue for the environment from the “Quorum Hacker” is considered low.</p>
         </section>
         <section class="scroll-point" id="area-2">
             <h2>Legal issues</h2>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+            <p>Considering the issues of “Quorum Hacker” on biodiversity from a political and legal perspective. Because “Quorum Hacker” use DNA as robotic parts, they do not have specific genetic information. Also, since they do not have metabolic and self-replication mechanisms, which are elements of living organisms, they cannot be considered biotechnologically modified organisms as stipulated by the Cartagena Act. Therefore, it is highly unlikely that “Quorum Hacker” will have an impact on biodiversity, and legal issues are unlikely to be a problem.</p>
         </section>
         <section class="scroll-point" id="area-3">
             <h2>Social issues</h2>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+            <p>We discuss the potential societal concerns that "Quorum Hacker" may cause from the viewpoint of biofilm utilizers. The idea of using biofilms to recover resources such as methane gas from sewage currently exists, but it is unlikely that "Quorum Hacker" would inhibit that project. This is because the "Quorum Hacker" is expected to be used in areas where biofilm formation is undesirable, such as plant piping at power plants, and therefore, it is expected to be able to live separately from plants that utilize biofilms. Therefore, there should be no major social concerns with the implementation of "Quorum Hacker".</p>
+        </section>
+        <section class="scroll-point" id="area-4">
+            <h2>Potential responses from non-researchers</h2>
+            <p>Q: Is it safe if I eat it by mistake?<br>
+               A: It is not recommended, but since we do not use highly toxic substances, it should not be a problem.</p>
+            <p>Q: Is there any harm if the robot breaks and the contents are released?
+               A: DNA and liposomes are degraded in the environment, so it is not considered to be a major problem.</p>
+        </section>
+        <section class="scroll-point" id="area-5">
+            <h2>Other applicable areas</h2>
+            <p>“Quorum Hacker” expected to be applied to<br>
+                ・beneficial biofilm utilization technology<br>
+                ・Medical field</p>
         </section>
     </main>
     <aside id="sub-area">
         <nav id="g-nav">
             <ul id="g-navi">
-                <li><a href="#area-1">Ethical issues</a></li>
-                <li><a href="#area-2">Legal issues</a></li>
-                <li><a href="#area-3">Social issues</a></li>
+                <li><a href="#area-1">WWC</a></li>
+                <li><a href="#area-2">Ethical issues</a></li>
+                <li><a href="#area-3">Legal issues</a></li>
+                <li><a href="#area-4">Social issues</a></li>
+                <li><a href="#area-5">Other applicable area</a></li>
             </ul>
         </nav>
     </aside>
