--- a/background.html
+++ b/background.html
@@ -23,7 +23,8 @@
 <body>
 <main>
     <h1>Background</h1>
-    <p>Biofilms are slimy aggregates formed by microorganisms. It is a mixture of extracellular polysaccharides, proteins, lipids and nuclei with a three-dimensional structure, and it is often mentioned as a "city for microbes".
+    <div width="70%">
+       <p>Biofilms are slimy aggregates formed by microorganisms. It is a mixture of extracellular polysaccharides, proteins, lipids and nuclei with a three-dimensional structure, and it is often mentioned as a "city for microbes".
        Biofilms are formed in many different places around us, for instance, in the bathroom, kitchen, or even our mouths.
        Biofilms also harm the environment, for example, biofilms formed in the sewage pipe can cause corrosion and reduced performance, or if it is created in the heat exchanger in the power plant, it lowers the energy efficiency.
        Improving sewage treatment capacity and energy efficiency of power plants is a significant step toward decarbonization, especially since Japan relies heavily on fossil fuels as an energy source.
@@ -32,6 +33,7 @@
        Bactria creates biofilm, and they live alone in usual. However, at the same time, they secrete small molecules, called quormone, into the environment.When the concentration of quormone is low, nothing happens. On the other hand, once it exceeds a certain threshold, bacteria start creating a biofilm. This mechanism of communication among bacteria is what we call quorum sensing.
        Thus, by inhibiting this circuit that contributes to biofilm formation, we thought we could stop the formation of biofilms.
        'Quorum Hackers' are molecular robots composed of liposomes that block quorum sensing by releasing aptamers to quormones when the concentration of it gets high enough in the environment.</p>
+    </div>
 </main>
 </body>
 <div id="footer"></div>
