--- a/future.html
+++ b/future.html
@@ -22,25 +22,9 @@
 <div id="header"></div>
 <body>
     <main>
-        <h1>Future</h1>
-        <section>
-            <div>
-                <h2>Reaction</h2>
-                <p>Biofilm is prevented by disturbing quorum sensing.<br>
-                    Here, we proposed ...
-                </p>
-            </div>
-            <img src="images/yp_aptamer_noaxis.png" alt="explanation1">
-        </section>
-        <section>
-            <div>
-                <h2>Structure</h2>
-                <p>Quormone is attacked by aptamer.<br>
-                    Here, we proposed ...
-                </p>
-            </div>
-            <img src="images/MFE_aptamer.png" alt="explanation2">
-        </section>
+        <p>The essence of a ”Quorum Hacker” is to detect quorum sensing among bacteria and perform the appropriate outputs. In other words, “Quorum Hacker” not only inhibits quorum sensing, but also amplifies signals and can be used as a biosensor, and is expected to be applied to beneficial biofilm utilization technology and the medical field. The signaling mechanism of “Quorum Hacker” can also contribute to the evolution of molecular robotics by utilizing it as a part to realize robot-robot interaction to operate multicellular molecular robots, which are third-generation molecular robots, and hybrid robots, which are fourth-generation molecular robots.</p>
+        <img src="images/Future.png" width="80%">
+        <p>Acknowledgement Prof. Shogo Hamada (Tohoku University) provided the illustration.</p>
     </main>
     </body>
 <div id="footer"></div>
