--- a/notebook.html
+++ b/notebook.html
@@ -74,7 +74,7 @@
                 <h4>【Method】</h4>
                 <p>First, DNA Aptamer (Pool<sub>99</sub>) and Output1 were prepared to 1200nM with hybridization buffer. After preparation, DNA Aptamer (Pool<sub>99</sub>) (20 μL) was denatured at 95˚C for 5 min and cooled to 4˚C using a PCR thermal cycler. DNA Aptamer (Pool<sub>99</sub>) (20 μL) and Output1 (20 μL) were then mixed in a 1 : 1 ratio, and the sample was set in a PCR thermal cycler at 53˚C for 30 min, followed by 48˚C for at least 4 hr. The mixture was then held at 43˚C for 30 min and 38 ˚C for 4 hr.<sup>1)</sup></p>
                 <h4>Preparation amount</h4>
-                <p>C4-HSL Aptamer (99bp)</p>
+                <p>DNA Aptamer (99bp)</p>
                 <table class="element">
                     <tr><td>DNA Aptamer</td><td><div class="volume">0.48μL</div></td></tr>
                     <tr><td>Hybridization buffer</td><td><div class="volume">39.52μL</div></td></tr>
