--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
                 <p>Name: Takumi Nishida<br>
                     Role:Experiment<br>
                     University:Kansai University<br>
-                    Major: Faculty of Chemistry, Materials and Bioengineering<br>
+                    Major: Chemistry, Materials and Bioengineering<br>
                 </p>
             </div>
             <div class="col">
@@ -77,15 +77,15 @@
     <div class="container kakomi-box3">
         <div class="row">
             <div class="col">
-                <p>Name:<br>
-                    Role:<br>
-                    University:<br>
-                    Major:<br>
+                <p>Name: Koichi Tanimoto<br>
+                    Role: Experiment<br>
+                    University: Kansai University<br>
+                    Major: Chemistry, Materials and Bioengineering<br>
                 </p>
             </div>
             <div class="col">
                 <div class="indvidual_photo">
-                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+                    <img src="images/photo_Tanimoto-san.png" class="img-fluid">
                 </div>
             </div>
         </div>
