--- a/elsi.html
+++ b/elsi.html
@@ -38,7 +38,7 @@
         <section class="scroll-point" id="area-1">
             <h2>WWC</h2>
             <table>
-                <tr><th>Where</th><th>Who</th><th>Concerns</th></tr>
+                <tr><th><div class="hyou">Where</div></th><th><div class="hyou">Who</div></th><th><div class="hyou">Concerns</div></th></tr>
                 <tr><td>In the nature</td><td>Pro-environment group</td><td>Unintended leakage into the environment</td></tr>
                 <tr><td>Laboratory</td><td>Government</td><td>Impact of using DNA on biodiversity</td></tr>
                 <tr><td>Sewage treatment plant</td><td>Biofilm Utilizers</td><td>Inhibits the utilized biofilm</td></tr>
@@ -77,7 +77,8 @@
                 <li><a href="#area-2">Ethical issues</a></li>
                 <li><a href="#area-3">Legal issues</a></li>
                 <li><a href="#area-4">Social issues</a></li>
-                <li><a href="#area-5">Other applicable area</a></li>
+                <li><a href="#area-5">Potential responses from non-researchers</a></li>
+                <li><a href="#area-6">Other applicable area</a></li>
             </ul>
         </nav>
     </aside>
