--- a/design.html
+++ b/design.html
@@ -63,7 +63,7 @@
             <p>The processor part of “Quorum Hacker” is composed of two DNA circuits described below.</p>
             <p>1. Quormone concentration detection circuit<sup>3)</sup></p>
             <p>2. DNA amplification circuit which produces DNA aptamer<sup>3)</sup></p>
-            <p>The concentration detection circuit modifies the end of Output 2 released by the sensor part, and DNA amplification is withheld until a certain threshold is exceeded. When the amount of Output 2 exceeds the threshold, the concentration detection circuit overflows, which activates the DNA amplification circuit, and the mass synthesis of aptamers initiates.</p>
+            <p>The concentration detection circuit modifies the end of Output 2 by a drain and inhibits subsequent enzymatic reactions, and DNA amplification is withheld until a certain threshold is exceeded. When the amount of Output 2 exceeds the threshold, the concentration detection circuit overflows, which activates the DNA amplification circuit, and the mass synthesis of aptamers initiates.</p>
             <img src="movies/PENtoolbox.gif">
             <img src="movies/drain.gif">
         </section>
