--- a/team.html
+++ b/team.html
@@ -94,13 +94,13 @@
         <div class="row">
             <div class="col">
                 <div class="indvidual_photo">
-                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+                    <img src="images/photo_Shima-san.png" class="img-fluid">
                 </div>
             </div>
             <div class="col">
-                <p>Name:<br>
-                    Role:<br>
-                    University:<br>
+                <p>Name: Akito Shima<br>
+                    Role: Presenter, Robot design<br>
+                    University: Kyushu University<br>
                     Major:<br>
                 </p>
             </div>
