--- a/team.html
+++ b/team.html
@@ -101,7 +101,7 @@
                 <p>Name: Akito Shima<br>
                     Role: Presenter, Robot design<br>
                     University: Kyushu University<br>
-                    Major:<br>
+                    Major: Department of Biology<br>
                 </p>
             </div>
         </div>
@@ -126,24 +126,14 @@
     <div class="container kakomi-box3">
         <div class="row">
             <div class="col">
-                <div class="indvidual_photo">
-                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
-                </div>
-            </div>
-            <div class="col">
-                <p>Name:<br></p>
+                <p>Name: Shogo Hamada<br></p>
             </div>
         </div>
     </div>
     <div class="container kakomi-box3">
         <div class="row">
             <div class="col">
-                <p>Name:<br></p>
-            </div>
-            <div class="col">
-                <div class="indvidual_photo">
-                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
-                </div>
+                <p>Name: Yuki Suzuki<br></p>
             </div>
         </div>
     </div>
