--- a/conclusion.html
+++ b/conclusion.html
@@ -23,24 +23,7 @@
 <body>
     <main>
         <h1>Conclusion</h1>
-        <section>
-            <div>
-                <h2>Reaction</h2>
-                <p>Biofilm is prevented by disturbing quorum sensing.<br>
-                    Here, we proposed ...
-                </p>
-            </div>
-            <img src="images/yp_aptamer_noaxis.png" alt="explanation1">
-        </section>
-        <section>
-            <div>
-                <h2>Structure</h2>
-                <p>Quormone is attacked by aptamer.<br>
-                    Here, we proposed ...
-                </p>
-            </div>
-            <img src="images/MFE_aptamer.png" alt="explanation2">
-        </section>
+        <p>We designed a molecular robot, Quorum Hacker, to inhibit biofilm formation in biomodjapan2022. We confirmed that the sensor part, which is a DNA aptamer that detects quormones, the processor part, which is a concentration detection circuit, and the amplification circuit for the DNA aptamer could work as designed through experiments and simulations. The membrane fusion mechanism, which is the actuator part, is based on a method that has already been reported. Therefore, we expect that the feasibility of this molecular robot is sufficient.</p>
     </main>
     </body>
 <div id="footer"></div>
